--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Quelle antenne ?</title>
-  <span>Cliquez sur la carte là où vous souhaitez installer votre antenne puis laisser vous guider.</span>
-
+  
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
   <link rel="stylesheet" href="assets/Control.Geocoder.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
@@ -17,10 +16,36 @@
   <script src="assets/Control.Geocoder.js" defer></script>
   <script src="assets/distance.js" defer></script>
   <script src="assets/script.js" defer></script>
-
-</head>
-<body>
+  <script src="assets/script-ui.js" defer></script>
   
+</head>
+<body class="container">
+  <div id="params">
+    <div>
+      <p>Parfois, à la campagne, la 4G est le seul moyen d'avoir un accès internet valable.
+      Souvent, ce signal est faible à cause de l'éloignement des relais et du relief.
+      Dans ce cas on cherche à installer une antenne 4G chez soi pour amplifier le signal.</p>
+      <p>Cette carte permet de trouver le meilleur relai 4G vers lequel faire pointer notre antenne en tenant compte du relief.</p>
+      <p>Comment ça marche :
+        <ul>
+          <li>Indiquer la hauteur à laquelle l'antenne sera installée ;</li>
+          <li>Indiquer le rayon de recherche du meilleur relai ;</li>
+          <li>Cliquer sur la carte là où l'antenne sera installée ;</li>
+          <li>Attendre. Les marqueurs verts sont les meilleurs relais.</li>
+        </ul>
+      </p>
+    </div>
+    <div id="msg"></div>
+    <label for="hauteur"><b>Hauteur d'installation de l'antenne en mètre.</b></label>
+    <input type="number" id="hauteur" value="10">
+    <p></p>
+    <label for="rayon"><b>Périmètre de recherche</b></label>
+    <input id="rayon" type="range" min="500" max="10000" step="500" />
+    <div id="bubble"></div>
+    <p></p>
+    <label for="progress"><b>Recherche des antennes</b></label>
+    <progress id="progress" value="0" max="100"></progress>
+  </div>
   <div id="map"></div>
   
 </body>
