--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="https://unpkg.com/leaflet@1.6.0/dist/leaflet.js" integrity="sha512-gZwIG9x3wUXg2hdXF6+rVkLF/0Vi9U8D2Ntg4Ga5I5BZpVkVxlJWbSQtXPSiUTtC0TjtGOmxa1AJPuV0CPthew==" crossorigin=""></script>
   <script src='https://unpkg.com/@turf/turf/turf.min.js'></script>
   <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
-  <script src="assets/Control.Geocoder.js" defer></script>
+  <!--<script src="assets/Control.Geocoder.js" defer></script>-->
   <script src="assets/distance.js" defer></script>
   <script src="assets/script.js" defer></script>
   <script src="assets/script-ui.js" defer></script>
