--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Quelle antenne ?</title>
   
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.6.0/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin=""/>
-  <link rel="stylesheet" href="assets/Control.Geocoder.css">
+  <!--<link rel="stylesheet" href="assets/Control.Geocoder.css">-->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
   <link rel="stylesheet" href="assets/style.css">
   
