:sparkles: Add help button

--- a/index.html
+++ b/index.html
@@ -22,30 +22,34 @@
 </head>
 <body>
   <div class="container">
-    <div id="params">
-      <div>
-        <p>Parfois, à la campagne, la 4G est le seul moyen d'avoir un accès internet valable.
-        Souvent, ce signal est faible à cause de l'éloignement des relais et du relief.
-        Dans ce cas on cherche à installer une antenne 4G chez soi pour amplifier le signal.</p>
-        <p>Cette carte permet de trouver le meilleur relai 4G vers lequel faire pointer notre antenne en tenant compte du relief.</p>
-        <p>Comment ça marche :
-          <ul>
-            <li>Indiquer la hauteur à laquelle l'antenne sera installée ;</li>
-            <li>Indiquer le rayon de recherche du meilleur relai ;</li>
-            <li>Cliquer sur la carte là où l'antenne sera installée ;</li>
-            <li>Attendre. Les marqueurs verts sont les meilleurs relais.</li>
-          </ul>
-        </p>
-      </div>
-      <div id="msg"></div>
-    </div>
     <div id="map"></div>
   </div>
+
   <div class="ontop">
     <div id="progressBar">
       <p><b>Recherche des antennes en cours…</b></p>
       <progress id="progress" value="0" max="100"></progress>
   </div>
+
+  <div id="usage">
+    <div>
+      <p>Parfois, à la campagne, la 4G est le seul moyen d'avoir un accès internet valable.
+      Souvent, ce signal est faible à cause de l'éloignement des relais et du relief.
+      Dans ce cas on cherche à installer une antenne 4G chez soi pour amplifier le signal.</p>
+      <p>Cette carte permet de trouver le meilleur relai 4G vers lequel faire pointer notre antenne en tenant compte du relief.</p>
+      <p>Comment ça marche :
+        <ul>
+          <li>Indiquer la hauteur à laquelle l'antenne sera installée ;</li>
+          <li>Indiquer le rayon de recherche du meilleur relai ;</li>
+          <li>Cliquer sur la carte là où l'antenne sera installée ;</li>
+          <li>Attendre. Les marqueurs verts sont les meilleurs relais.</li>
+        </ul>
+      </p>
+    </div>
+    <div id="msg"></div>
+  </div>
+
+
   </div>
 </body>
 </html>
