--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <script src="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
   <!--<script src="assets/Control.Geocoder.js" defer></script>-->
   <script src="assets/distance.js" defer></script>
-  <script src="assets/script.js" defer></script>
+  <script type="module" src="assets/script.js" defer></script>
   <script src="assets/script-ui.js" defer></script>
   
 </head>
 <body>
-  <div class="container">
+  <div id="main" class="container">
     <div id="map"></div>
   </div>
 
